--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "project",
     "require": {
         "php": "^8.0.2",
-        "code16/sharp": "^7.17",
+        "code16/sharp": "@dev",
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^2.7",
         "laravel/framework": "^9.2",
@@ -61,5 +61,14 @@
         "sort-packages": true
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "repositories": [
+        {
+            "type": "path",
+            "url": "sharp-package",
+            "options": {
+                "symlink": true
+            }
+        }
+    ]
 }
